--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-anyio==4.4.0
-certifi==2024.7.4
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-ollama==0.2.1
-sniffio==1.3.1
+asgiref==3.8.1
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+python-dotenv==1.0.1
+sqlparse==0.5.0
+Werkzeug==3.0.3
