--- a/website/package.json
+++ b/website/package.json
@@ -18,11 +18,11 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "@mui/x-date-pickers": "^7.11.1",
     "@testing-library/dom": "^7.21.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "@types/date-fns": "^2.6.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
