--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.17.5",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@mui/x-date-pickers": "^7.11.1",
